<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >
	
    <!--  Head -->
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <!-- Top Bar -->
	    <RelativeLayout
	        android:id= "@+id/header_bar"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bar_bg"  >
			
	        <ImageView
	            android:id="@+id/logo"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:scaleType="center"
	            android:src="@drawable/logo" />
	        
	        <ImageView
	            android:id="@+id/icon_help"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_marginTop="10dp"
	            android:layout_marginRight="10dp"
	            android:onClick="showHelp"
	            android:clickable="true"
	            android:layout_gravity="right"
	            android:src="@drawable/help" />
	
	    </RelativeLayout><!-- End Top Bar -->
	    
	    
	    
	</RelativeLayout><!-- End Head -->
    
    <RelativeLayout
        android:id="@+id/menu_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/store_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/store_name" />

                <Spinner
                    android:id="@+id/brand_name_dd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:prompt="@string/brand_prompt" />
                
                <EditText
                    android:id="@+id/city"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/city" />
                
                <EditText
                    android:id="@+id/notes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:singleLine="false"
                    android:lines="5"
                    android:layout_marginTop="10dp"
                    android:hint="@string/notes" />
                
                <ImageView
                    android:id="@+id/capture_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                
            </LinearLayout>
            
        </ScrollView>
		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            
            <ImageButton
                    android:id="@+id/gallery_btn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="galleryImage"
                    android:layout_weight="1"
                    android:src="@drawable/gallery_icon" />
            
            <ImageButton
                    android:id="@+id/capture_btn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="captureImage"
                    android:layout_weight="1"
                    android:src="@drawable/display_icon" />
            
            <Button
                    android:id="@+id/submit_form_btn"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="saveForm"
                    android:layout_weight="2"
                    android:text="@string/save_btn" />
        </LinearLayout>
    </RelativeLayout>
 	
</RelativeLayout>