<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scaleType="centerCrop"
	        android:src="@drawable/info_bg" />
        
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                
	        <RelativeLayout
		        android:id="@+id/info_block"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="90dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp" >
		        
	            
	            	
	            	<!-- IMEI Number BLOCK -->
	            
			        <RelativeLayout
				        android:id="@+id/info_block_1"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content" >
				        
				        <RelativeLayout
				            android:id="@+id/sim_imei_label"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:background="#C2C617" >
				            
				            <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/imei_number"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="16sp" />
				            
				        </RelativeLayout>
				        
				        <RelativeLayout
				            android:id="@+id/sim_imei_bar"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:layout_below="@id/sim_imei_label"
				            android:background="#ffffff" >
				            
				            <TextView
				                android:id="@+id/sim_imei_value"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="15sp" />
				            
				            <ImageView
				                android:id="@+id/imei_tick_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/tick" />
				            
				            <ImageView
				                android:id="@+id/imei_cross_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/cross" />
				            
				        </RelativeLayout>
				        
				    </RelativeLayout>
				    
			        <!-- SIM Serial Number BLOCK -->
		            
			        <RelativeLayout
				        android:id="@+id/info_block_2"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/info_block_1"
				        android:layout_marginTop="15dp" >
				        
				        <RelativeLayout
				            android:id="@+id/sim_serial_label"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:background="#F7B600" >
				            
				            <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/sim_serial"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="16sp" />
				            
				        </RelativeLayout>
				        
				        <RelativeLayout
				            android:id="@+id/sim_serial_bar"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:layout_below="@id/sim_serial_label"
				            android:background="#ffffff" >
				            
				            <TextView
				                android:id="@+id/sim_serial_value"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="15sp" />
				            
				            <ImageView
				                android:id="@+id/sim_tick_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/tick" />
				            
				            <ImageView
				                android:id="@+id/sim_cross_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/cross" />
				            
				        </RelativeLayout>
				        
				    </RelativeLayout>
				    
			        <!-- Internet Status BLOCK -->
		            
			        <RelativeLayout
				        android:id="@+id/info_block_3"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/info_block_2"
				        android:layout_marginTop="15dp" >
				        
				        <RelativeLayout
				            android:id="@+id/internet_label"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:background="#C9970A" >
				            
				            <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/internet_status"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="16sp" />
				            
				        </RelativeLayout>
				        
				        <RelativeLayout
				            android:id="@+id/internet_bar"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:layout_below="@id/internet_label"
				            android:background="#ffffff" >
				            
				            <TextView
				                android:id="@+id/internet_value"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="15sp" />
				            
				            <ImageView
				                android:id="@+id/internet_tick_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/tick" />
				            
				            <ImageView
				                android:id="@+id/internet_cross_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/cross" />
				            
				        </RelativeLayout>
				        
				    </RelativeLayout>
				    
			        <!-- GPS Status BLOCK -->
		            
			        <RelativeLayout
				        android:id="@+id/info_block_4"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/info_block_3"
				        android:layout_marginTop="15dp" >
				        
				        <RelativeLayout
				            android:id="@+id/gps_label"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:background="#6C930C" >
				            
				            <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/gps_status"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="16sp" />
				            
				        </RelativeLayout>
				        
				        <RelativeLayout
				            android:id="@+id/gps_bar"
				            android:layout_width="fill_parent"
				            android:layout_height="38dp"
				            android:layout_below="@id/gps_label"
				            android:background="#ffffff" >
				            
				            <TextView
				                android:id="@+id/gps_value"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:textColor="#000000"
				                android:layout_marginLeft="15dp"
				                android:layout_centerVertical="true"
				                android:textSize="15sp" />
				            
				            <ImageView
				                android:id="@+id/gps_tick_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/tick" />
				            
				            <ImageView
				                android:id="@+id/gps_cross_icon"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_alignParentRight="true"
				                android:layout_centerVertical="true"
				                android:layout_marginRight="15dp"
				                android:visibility="gone"
				                android:src="@drawable/cross" />
				            
				        </RelativeLayout>
				        
				    </RelativeLayout>
				    
			        <LinearLayout
			            android:id="@+id/info_btns"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_below="@+id/info_block_4"
			            android:orientation="horizontal"
			            android:layout_marginTop="5dp"
			            android:gravity="center_horizontal">
			        
				        <Button
				            android:id="@+id/verify_again"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/verify_again"
				            android:layout_marginTop="10dp"
				            android:paddingLeft="30dp"
				            android:paddingRight="30dp"
				            android:onClick="verifyAgain" />
				        
				        <Button
				            android:id="@+id/connect"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/connect"
				            android:layout_marginTop="10dp"
				            android:paddingLeft="30dp"
				            android:paddingRight="30dp"
				            android:onClick="connectNow" />
			            
			    </LinearLayout>
			    
			</RelativeLayout>
			
    	</ScrollView>
    	
    </FrameLayout>

</LinearLayout>